BaSP-W06: Finished Employee-signup and login html, js and css

--- a/Semana-06/views/index.html
+++ b/Semana-06/views/index.html
@@ -33,15 +33,15 @@
                 </div>
             </div>
             <nav id="option-aside">
-                <a class="menu-option" href="">
+                <a class="menu-option" href="../views/index.html">
                     <i class="fa-solid fa-house fa-lg"></i>
                     <p class="text-aside">Home</p>
                 </a>
-                <a class="menu-option" href="">
+                <a class="menu-option" href="../views/sign-up.html">
                     <i class="fa-solid fa-user fa-lg"></i>
                     <p class="text-aside">SignUp</p>
                 </a>
-                <a class="menu-option" href="">
+                <a class="menu-option" href="../views/login.html">
                     <i class="fa-solid fa-user fa-lg"></i>
                     <p class="text-aside">LogIn</p>
                 </a>
