--- a/Semana-06/styles/employee-signup.css
+++ b/Semana-06/styles/employee-signup.css
@@ -1,6 +1,3 @@
-.wrapper, .wrapper-inner{
-    width: 100%;
-}
 h1{
     margin-top: 3%;
     margin-bottom: 1%;
@@ -9,11 +6,30 @@ h1{
 header{
     margin-bottom: 3%;
 }
+form {
+    height: 100vh;
+    margin-bottom: 4%;
+}
+input{
+    margin-bottom: 0%;
+}
+main p {
+    margin-bottom: 5%;
+    font-size: 13px;
+    color: #f13312;
+}
+
 .error-input{
     border: 2px solid #f13312;
 }
 .ok-input{
     border: 2px solid #AACE9B;
+}
+@media only screen and (min-width: 481px) {
+    form {
+        height: 60%;
+        margin-bottom: 4%;
+    }
 }
 @media only screen and (min-width: 1024px) {
     .title-bar{
@@ -26,3 +42,4 @@ header{
     margin-bottom: 1%;
     }
 }
+
