--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -74,8 +74,10 @@
                     <div id="name-contact-ls">
                         <label class="label-contact" for="email">Email</label>
                         <input type="text" name="email" placeholder="Your email here">
+                        <p name="email-p"></p>
                         <label class="label-contact" for="pass">Password</label>
                         <input type="password" name="pass" placeholder="Your password here">
+                        <p name="pass-p"></p>
                     </div>
                     <div id="btn-form">
                         <button type="submit" id="submit-btn">
