BaSP-W07: Management errors improvement

--- a/Semana-07/views/sign-up.html
+++ b/Semana-07/views/sign-up.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Cristian Gerster" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="employee, work, reports, hours log, roles, Resource, leadership, team, management,
-     traceability, Productivity, Booster" />
+    traceability, Productivity, Booster" />
     <script src="https://kit.fontawesome.com/d7c9d962f7.js" crossorigin="anonymous"></script>
     <title>Trackgenix</title>
     <link rel="stylesheet" type="text/css" href="../styles/reset.css">
@@ -77,9 +77,9 @@
                             <input type="text" name="name" placeholder="Your name here">
                             <p name="name-p"></p>
 
-                            <label class="label-contact" for="lastname">Lastname</label>
-                            <input type="text" name="lastname" placeholder="Your lastname here">
-                            <p name="lastname-p"></p>
+                            <label class="label-contact" for="lastName">Lastname</label>
+                            <input type="text" name="lastName" placeholder="Your lastname here">
+                            <p name="lastName-p"></p>
 
                             <label class="label-contact" for="dni">DNI</label>
                             <input type="text" name="dni" placeholder="Your DNI here">
@@ -98,21 +98,21 @@
                             <input type="text" name="address" placeholder="Your addres here">
                             <p name="address-p"></p>
 
-                            <label class="label-contact" for="location">Location</label>
-                            <input type="text" name="location" placeholder="Your location here">
-                            <p name="location-p"></p>
+                            <label class="label-contact" for="city">Location</label>
+                            <input type="text" name="city" placeholder="Your location here">
+                            <p name="city-p"></p>
 
-                            <label class="label-contact" for="postalcode">Postal Code</label>
-                            <input type="text" name="postalcode" placeholder="Your postal code here">
-                            <p name="postalcode-p"></p>
+                            <label class="label-contact" for="zip">Postal Code</label>
+                            <input type="text" name="zip" placeholder="Your postal code here">
+                            <p name="zip-p"></p>
 
                             <label class="label-contact" for="email">Email</label>
                             <input type="text" name="email" placeholder="Your email here">
                             <p name="email-p"></p>
 
-                            <label class="label-contact" for="pass">Password</label>
-                            <input type="password" name="pass" placeholder="Your password here">
-                            <p name="pass-p"></p>
+                            <label class="label-contact" for="password">Password</label>
+                            <input type="password" name="password" placeholder="Your password here">
+                            <p name="password-p"></p>
 
                             <label class="label-contact" for="passr">Repeat password</label>
                             <input type="password" name="passr" placeholder="Repeat password here">
